// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help rendering works 1`] = `
Object {
  "attachments": Array [
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for a repository:
\`/github subscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for a repository:
\`/github unsubscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for all repositories in an organization:
\`/github subscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for an organization:
\`/github unsubscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions in a channel:
\`/github subscribe list\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Close an issue:
\`/github close [issue link]\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Reopen an Issue:
\`/github reopen [issue link]\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Adjust your settings in this workspace:
\`/github settings\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Connect your GitHub account:
\`/github signin\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Show this help message:
\`/github help\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Create a new issue:
\`/github open owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Trigger a deployment:
\`/github deploy owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List deployments of a repo:
\`/github deploy owner/repository list\`",
    },
    Object {
      "color": "",
      "footer": "<https://github.com/integrations/slack#readme|Learn More> — <https://github.com/contact?form%5Bsubject%5D=GitHub%2BSlack%20integration|Contact Support>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "text": "",
    },
  ],
  "response_type": "ephemeral",
  "text": ":wave: Need some help with \`/github\`?",
}
`;

exports[`Help rendering works when passing additional attachments 1`] = `
Object {
  "attachments": Array [
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for a repository:
\`/github subscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for a repository:
\`/github unsubscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for all repositories in an organization:
\`/github subscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for an organization:
\`/github unsubscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions in a channel:
\`/github subscribe list\`",
    },
    Object {
      "color": "",
      "footer": "<https://github.com/integrations/slack#readme|Learn More> — <https://github.com/contact?form%5Bsubject%5D=GitHub%2BSlack%20integration|Contact Support>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "text": "",
    },
    Object {
      "text": "integrations/slack",
      "title": "Subscribed to these accounts",
    },
  ],
  "response_type": "ephemeral",
  "text": ":wave: Need some help with \`/github\`?",
}
`;
